basic shell elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+<nav>
+  PUERTO RICO AIRLINES
+  <button>HOME</button>
+  <button>FLIGHTS</button>
+  <button>SUPPORT</button>
+  <button>LOGIN</button>
+</nav>
+<main>
+  <table>
+    <tr>
+      <td>
+        <section>
+          <header>Flights</header>
+          <span>Come check out or sweet flights!<br>Direct flights available daily!</span>
+          <button>Lets go</button>
+        </section>
+      </td>
+      <td>
+        <section>
+          <header>Group Trips</header>
+          <span>We offer great group rates! For families with 4 members to huge gatherings with 50+!</span>
+          <button>Group Rates</button>
+        </section>
+      </td>
+      <td>
+        <section>
+          <header>Discount Flights</header>
+          <span>Discount flights available for individuals! Single chair filler tickets for low rates!</span>
+          <button>Jump in</button>
+        </section>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <section>
+          <header>About Us</header>
+          <p>Id exercitation quis veniam sint ex amet officia do culpa sint dolore. Laboris tempor enim duis laboris. Enim ad nulla officia qui nisi eu. Aute elit ad Lorem in labore qui. Exercitation labore officia est labore deserunt culpa sit aliqua fugiat excepteur nisi culpa consectetur fugiat. Laboris amet sit id ullamco consectetur cillum.</p>
+        </section>
+      </td>
+    </tr>
+  </table>
+</main>
   </body>
 </html>
