some initial styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
 <nav>
+  <span>
   PUERTO RICO AIRLINES
+</span>
   <button>HOME</button>
   <button>FLIGHTS</button>
   <button>SUPPORT</button>
