more styling, got the shadows

--- a/index.html
+++ b/index.html
@@ -16,12 +16,41 @@
   <button>LOGIN</button>
 </nav>
 <main>
-  <table>
+  <section>
+  <article class= 'smallcard'>
+    <header>Flights</header>
+    <main class='card-body'>Come check out or sweet flights!<br>Direct flights available daily!</main>
+    <footer>
+      <button class='card-button'>Lets go</button>
+    </footer>
+
+  </article>
+  <article class= 'smallcard'>
+    <header>Group Trips</header>
+    
+    <footer>
+      <button class='card-button'>Group Rates</button>
+    </footer>
+  </article>
+  <article class= 'smallcard'>
+    <header>Discount Flights</header>
+    
+    <footer>
+      <button class='card-button'>Jump in</button>
+    </footer>
+  </article>
+</section>
+<section>
+  <article class='largecard'></article>
+</section>
+</main>
+<!--  <table>
     <tr>
       <td>
         <section>
           <header>Flights</header>
           <span>Come check out or sweet flights!<br>Direct flights available daily!</span>
+          <br>
           <button>Lets go</button>
         </section>
       </td>
@@ -29,6 +58,7 @@
         <section>
           <header>Group Trips</header>
           <span>We offer great group rates! For families with 4 members to huge gatherings with 50+!</span>
+          <br>
           <button>Group Rates</button>
         </section>
       </td>
@@ -36,6 +66,7 @@
         <section>
           <header>Discount Flights</header>
           <span>Discount flights available for individuals! Single chair filler tickets for low rates!</span>
+          <br>
           <button>Jump in</button>
         </section>
       </td>
@@ -49,6 +80,7 @@
       </td>
     </tr>
   </table>
+  -->
 </main>
   </body>
 </html>
