--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-<nav>
-  <span>
+<header class="page-header">
+  <h1>
   PUERTO RICO AIRLINES
-</span>
-  <button>HOME</button>
+  </h1>
+  <nav>
+    <button>HOME</button>
   <button>FLIGHTS</button>
   <button>SUPPORT</button>
   <button>LOGIN</button>
 </nav>
+</header>
 <main>
   <section>
-  <article class= 'smallcard'>
+  <article class= 'card smallcard'>
     <header>Flights</header>
     <main class='card-body'>Come check out or sweet flights!<br>Direct flights available daily!</main>
     <footer>
@@ -25,23 +27,31 @@
     </footer>
 
   </article>
-  <article class= 'smallcard'>
+  <article class= 'card smallcard'>
     <header>Group Trips</header>
-    
+    <main class='card-body'>We offer great group rates! For families with 4 members to huge gatherings with 50+!</main>
     <footer>
       <button class='card-button'>Group Rates</button>
     </footer>
   </article>
-  <article class= 'smallcard'>
+  <article class= 'card smallcard'>
     <header>Discount Flights</header>
-    
+    <main class='card-body'>Discount flights available for individuals! Single chair filler tickets for low rates!</main>
     <footer>
       <button class='card-button'>Jump in</button>
     </footer>
   </article>
 </section>
 <section>
-  <article class='largecard'></article>
+  <article class='card largecard'>
+    <header>About Us</header>
+    <main class='card-body'>
+      Id exercitation quis veniam sint ex amet officia do culpa sint dolore. Laboris tempor enim duis laboris. Enim ad nulla officia qui nisi eu. Aute elit ad Lorem in labore qui. Exercitation labore officia est labore deserunt culpa sit aliqua fugiat excepteur nisi culpa consectetur fugiat. Laboris amet sit id ullamco consectetur cillum.
+    </main>
+    <footer>
+      <button class='card-button'>Learn More</button>
+    </footer>
+  </article>
 </section>
 </main>
 <!--  <table>
@@ -57,7 +67,7 @@
       <td>
         <section>
           <header>Group Trips</header>
-          <span>We offer great group rates! For families with 4 members to huge gatherings with 50+!</span>
+          <span></span>
           <br>
           <button>Group Rates</button>
         </section>
